# ares

./: README.md  pyproject.toml
examples/: 01_sequential_eval_with_local_llm.py  utils.py
src/ares/: presets.py
src/ares/code_agents/aider_agent/: __init__.py  aider_agent.py  aider_agent_test.py  ares_model.py  ares_model_test.py  container_io.py  container_io_test.py
src/ares/code_agents/terminus2/: terminus2_agent.py
